# crawlerpolicy

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  sources.yaml
.github/workflows/: daily-check.yml  (+1 more)
data/: health.json  opt-out-matrix.json  pillar-digests.json
pipeline/: analyzer.py  bootstrap_baseline.py  check.py  config.py  critical_reading.py  differ.py  event_writer.py  git_ops.py  pillar_digest.py  raw_log.py  relevance.py  snapshots.py  sources.py  state.py  state_of_play.py  trend_context.py  wayback.py
site/: astro.config.mjs  package-lock.json  package.json
state/: amazonbot.json  applebot-extended.json  ccbot.json  cf-changelog-ai-crawl-control.json  cf-changelog-ai-gateway.json  cf-changelog-ai-search.json  cf-changelog-radar.json  claudebot.json  cloudflare-blog.json  cloudflare-research.json  datadome-blog.json  eu-commission-digital.json  gemini-agent-infra.json  gemini-agent-standards.json  gemini-ai-licensing-deals.json  gemini-content-blocking.json  gemini-crawler-insights.json  gemini-regulator-ai-content.json  google-extended.json  gptbot.json  mcp-spec.json  meta-externalagent.json  microsoft-bot-docs.json  news-media-alliance.json  openai-blog.json  perplexitybot.json  reddit-corporate.json  uk-cma-google-search-case.json  uk-cma.json  uk-gov-agentic-ai.json  us-ftc.json  web-bot-auth-repo.json
tests/: test_analyzer.py  test_check.py  test_config.py  test_critical_reading.py  test_differ.py  test_event_writer.py  test_relevance.py  test_snapshots.py  test_sources.py  test_state.py  test_state_of_play.py
(+170 files in other folders)
